--- a/package.json
+++ b/package.json
@@ -8,15 +8,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.7.1",
+    "@emotion/react": "^11.7.1",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.4.0",
+    "cookie": "^0.4.2",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/cookie": "^0.4.1",
     "@types/node": "17.0.15",
-    "@types/react": "17.0.39",
+    "@types/react": "^17.0.39",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
-    "typescript": "4.5.5"
+    "typescript": "^4.5.5"
   }
 }
